task26/deploy_nginx_stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx
          image: danwhite123/nginx-image:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-secret
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: default-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: default-page
              mountPath: /usr/share/nginx/html
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: nginx-secret
          secret:
            secretName: nginx-secret
        - name: default-page
          configMap:
            name: default-page
        - name: default-conf
          configMap:
            name: default-conf
