task26/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-apache-service
spec:
  selector:
    app:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
