task26/service_apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache-app
  ports:
    - nodePort: 30081
      port: 8080
      targetPort: 80
  type: NodePort
