task26/service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app
  ports:
    - nodePort: 30080
      port: 80
      targetPort: 80
  type: NodePort
