task26/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: inpoint.sytes.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service  # Name of your service
              port:
                number: 30080
